Fix problem on mobile version

--- a/web/src/components/TickerTable/TickerTable.pcss
+++ b/web/src/components/TickerTable/TickerTable.pcss
@@ -50,11 +50,11 @@
         cursor: pointer;
         display: flex;
         flex-direction: row;
+        flex-shrink: 0;
         height: 100%;
         justify-content: center;
         min-width: 54px;
-        padding-top: 0;
-        width: 54px;
+        padding: 0 4px;
 
         &__link {
           color: var(--secondary-contrast-cta-color);
