--- a/web/src/mobile/styles/components/OrderButtons.pcss
+++ b/web/src/mobile/styles/components/OrderButtons.pcss
@@ -2,7 +2,7 @@
   align-items: flex-end;
   background-image: linear-gradient(transparent, var(--body-background-color));
   border: 0;
-  bottom: 0;
+  bottom: 52px;
   display: flex;
   height: 58px;
   justify-content: space-between;
