--- a/web/src/mobile/styles/components/TickerTable.pcss
+++ b/web/src/mobile/styles/components/TickerTable.pcss
@@ -74,7 +74,6 @@
 
           &:first-child {
             color: var(--primary-text-color);
-            font-size: 16px;
             font-weight: 500;
             letter-spacing: normal;
             line-height: 15px;
